update to conform to new channels spec
